--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "eslint": "^9.31.0"
+    "eslint": "^9.31.0",
+    "eslint-config-next": "^15.4.2"
   }
 }
